# nova

./: Cargo.toml  design.md
crates/nova-3d/: Cargo.toml
crates/nova-3d/src/: lib.rs  pbr.wgsl  shape.rs  stage.rs
crates/nova-assets/: Cargo.toml
crates/nova-assets/src/: lib.rs
crates/nova-core/: Cargo.toml
crates/nova-core/src/: app.rs  component.rs  inspectables.rs  lib.rs  node.rs  plugin.rs  resources.rs  system.rs  world.rs
crates/nova-derive/: Cargo.toml
crates/nova-derive/src/: derive_inspectable.rs  derive_vertex.rs  lib.rs
crates/nova-editor/: Cargo.toml
crates/nova-editor/src/: build.rs  egui.wgsl  egui_system.rs  load.rs  main.rs  main_ui.rs  project.rs  scenes.rs  view.rs  world_system.rs
crates/nova-engine/: Cargo.toml
crates/nova-engine/src/: app.rs  lib.rs
crates/nova-input/: Cargo.toml
crates/nova-input/src/: key.rs  lib.rs  mouse_button.rs
crates/nova-inspect/: Cargo.toml
crates/nova-inspect/src/: base_impl.rs  lib.rs
crates/nova-render/: Cargo.toml
crates/nova-render/src/: camera.rs  camera_node.rs  camera_stage.rs  color.rs  component.rs  depth_node.rs  depth_stage.rs  lib.rs  light.rs  light_node.rs  light_stage.rs  mesh.rs  msaa_node.rs  msaa_stage.rs  render_commands.rs  render_node.rs  render_settings.rs  render_stage.rs  render_system.rs  render_target.rs  render_texture.rs  renderable.rs  renderer.rs  vertex.rs
crates/nova-scene/: Cargo.toml
crates/nova-scene/src/: lib.rs
crates/nova-transform/: Cargo.toml
crates/nova-transform/src/: component.rs  lib.rs  system.rs
crates/nova-type/: Cargo.toml
crates/nova-type/src/: lib.rs  serde_traits.rs
crates/nova-wgpu/: Cargo.toml  README.md
crates/nova-wgpu/src/: bind_group.rs  buffer.rs  command_encoder.rs  gpu_system.rs  instance.rs  lib.rs  pipeline.rs  render_pass.rs  sampler.rs  swapchain.rs  texture.rs  wgpu_impl.rs
crates/nova-window/: Cargo.toml
crates/nova-window/src/: lib.rs  winit_impl.rs
examples/: core.rs  engine.rs
src/: lib.rs
