[package]
name = "nova-game"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]

[dependencies]
nova-assets = { path = "crates/nova-assets" } 
nova-core = { path = "crates/nova-core" }
nova-wgpu = { path = "crates/nova-wgpu" }
nova-derive = { path = "crates/nova-derive" }
nova-input = { path = "crates/nova-input" }
nova-render = { path = "crates/nova-render" }
nova-type = { path = "crates/nova-type", features = ["serialize"] } 
nova-scene = { path = "crates/nova-scene" }
nova-transform = { path = "crates/nova-transform", features = ["serde"] }
nova-window = { path = "crates/nova-window" }
glam = { version = "0.17.3", features = ["bytemuck"] }

[dev-dependencies]
nova-engine = { path = "crates/nova-engine" }
nova-3d = { path = "crates/nova-3d" }
