[package]
name = "nova-3d"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nova-core = { path = "../nova-core" }
nova-derive = { path = "../nova-derive" }
nova-wgpu = { path = "../nova-wgpu" }
nova-render = { path = "../nova-render" }
nova-assets = { path = "../nova-assets" }
glam = { version = "0.17", features = ["bytemuck"] }
bytemuck = "1.7.2"
