[package]
name = "nova-core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
legion = "0.4" 
serde = "1.0"
erased-serde = "0.3"
atomic_refcell = "0.1"
nova-inspect = { path = "../nova-inspect", optional = true }
egui = { version = "0.13", optional = true }

[features]
default = []
editor = ["egui", "nova-inspect"]