[package]
name = "nova-editor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nova-assets = { path = "../nova-assets", features = ["editor"] }
nova-core = { path = "../nova-core", features = ["editor"] }
nova-engine = { path = "../nova-engine" }
nova-input = { path = "../nova-input", features = ["editor"] }
nova-render = { path = "../nova-render", features = ["editor"] }
nova-transform = { path = "../nova-transform", features = ["editor"] }
nova-wgpu = { path = "../nova-wgpu" }
nova-window = { path = "../nova-window" }
serde = { version = "1.0", features = ["derive"] }
erased-serde = "0.3"
egui = "0.13" 
bytemuck = "1.7"
libloading = "0.7"
clap = "3.0.0-beta.2"
cargo_toml = "0.9"
log = "0.4"
simple_logger = "1.13"
glam = "0.17"
crossbeam = "0.8"
ron = "0.6"
toml = "0.5"