[package]
name = "nova-engine"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.25"
wgpu = "0.9"
pollster = "0.2"
nova-wgpu = { path = "../nova-wgpu", features = ["wgpu-impl"] }
nova-core = { path = "../nova-core" }
nova-render = { path = "../nova-render" }
nova-window = { path = "../nova-window", features = ["winit-impl"] }
nova-input = { path = "../nova-input", features = ["winit"] }
log = "0.4.14"
simple_logger = "1.13.0"
