[package]
name = "nova-render"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.7"
nova-core = { path = "../nova-core" }
nova-wgpu = { path = "../nova-wgpu" } 
nova-derive = { path = "../nova-derive" }
nova-assets = { path = "../nova-assets" }
nova-transform = { path = "../nova-transform" }
glam = { version = "0.17", features = ["bytemuck"] }
