[package]
name = "nova-scene"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
erased-serde = { version = "0.3" } 
nova-core = { path = "../nova-core", features = ["serde"] }
nova-type = { path = "../nova-type", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
