[package]
name = "nova-transform"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { version = "0.17", features = ["serde"] }
nova-core = { path = "../nova-core" } 
serde = { version = "1.0", features = ["derive"] }
nova-inspect = { path = "../nova-inspect" }

[features]
default = []
editor = ["nova-core/editor"]