[package]
name = "nova-type"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nova-core = { path = "../nova-core" }
erased-serde = { version = "0.3", optional = true } 
serde = { version = "1.0", optional = true }

[features]
default = []
serialize = ["serde", "erased-serde"]