[package]
name = "nova-wgpu"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nova-core = { path = "../nova-core" }
wgpu-types = "0.9"
wgpu = { version = "0.9", optional = true }

[features]
default = []
wgpu-impl = ["wgpu"]