[package]
name = "nova-window"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.17"
nova-core = { path = "../nova-core" }
winit = { version = "0.25", optional = true }

[features]
default = []
winit-impl = ["winit"]
